--- a/style/components/_products-section.scss
+++ b/style/components/_products-section.scss
@@ -18,17 +18,16 @@ main{
         position: absolute;
         transform: translate(0%, -50%); 
         top: 239px;
-        left: -72px;
+        // left: -72px;
+        left: 0px;
         z-index: -1;
 
         @media only screen and (max-width: 1100px) {
-            top: 130px;
-            left: -39px;
+            top: 146px;
             width: 340px;
         }
         @media only screen and (max-width: 600px) {
-            top: 98px;
-            left: -30px;
+            top: 110px;
             width: 256px;
         }
     }
