--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -1926,7 +1926,7 @@ main section#hero article div.overlay-green div h1.second-line {
 main section#hero article div.overlay-blue {
   position: absolute;
   bottom: 5%;
-  right: -1%;
+  right: 0%;
   -webkit-transform: translate(0%, -50%);
           transform: translate(0%, -50%);
   width: 68%;
@@ -2534,23 +2534,21 @@ main section#last-news img.decoration {
   position: absolute;
   -webkit-transform: translate(0%, -50%);
           transform: translate(0%, -50%);
-  top: 220px;
-  right: -37px;
+  top: 182px;
+  right: 0px;
   z-index: -1;
 }
 
 @media only screen and (max-width: 1100px) {
   main section#last-news img.decoration {
-    top: 126px;
-    right: -19px;
+    top: 116px;
     width: 340px;
   }
 }
 
 @media only screen and (max-width: 600px) {
   main section#last-news img.decoration {
-    top: 95px;
-    right: -56px;
+    top: 87px;
     width: 256px;
   }
 }
@@ -2975,22 +2973,20 @@ main section#products img.decoration {
   -webkit-transform: translate(0%, -50%);
           transform: translate(0%, -50%);
   top: 239px;
-  left: -72px;
+  left: 0px;
   z-index: -1;
 }
 
 @media only screen and (max-width: 1100px) {
   main section#products img.decoration {
-    top: 130px;
-    left: -39px;
+    top: 146px;
     width: 340px;
   }
 }
 
 @media only screen and (max-width: 600px) {
   main section#products img.decoration {
-    top: 98px;
-    left: -30px;
+    top: 110px;
     width: 256px;
   }
 }
@@ -3813,23 +3809,21 @@ main section#infos-for-farmers img.decoration {
   position: absolute;
   -webkit-transform: translate(0%, -50%);
           transform: translate(0%, -50%);
-  top: 154px;
-  right: -33px;
+  top: 142px;
+  right: 0px;
   z-index: -1;
 }
 
 @media only screen and (max-width: 1100px) {
   main section#infos-for-farmers img.decoration {
-    top: 129px;
-    right: -23px;
+    top: 138px;
     width: 330px;
   }
 }
 
 @media only screen and (max-width: 600px) {
   main section#infos-for-farmers img.decoration {
-    top: 96px;
-    right: -50px;
+    top: 102px;
     width: 246px;
   }
 }
